chore: refactor project configuration and remove unnecessary files
- Remove `.github/workflows/molecule.yml`
- Update `pre-commit-config.yaml` with new `ansible-lint` and `commitizen` versions
- Remove `.travis.yml` file
- Remove `.yamllint.yml` file
- Update `README.md` file with author and license information
- Update `meta/main.yml` with author and issue tracker URL
- Update `molecule/all/molecule.yml` with new image URLs
- Update `molecule/default/molecule.yml` with new image URLs
- Update `molecule/podman/molecule.yml` with new image URLs
- Update `molecule/tox/molecule.yml` with new image URL
- Add `pyproject.toml` file with project information
- Remove `requirements.txt` file
- Remove `tasks.yml`
- Remove `tox.ini`

Signed-off-by: Jonas Mauer <jam@kabelmail.net>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,13 +4,13 @@
 
 galaxy_info:
   role_name: updates
-  author: jam82
+  author: jomrr
   description: Ansible role for setting up automatic updates.
   company: ''
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
-  issue_tracker_url: https://github.com/jam82/ansible-role-updates/issues
+  issue_tracker_url: https://github.com/jomrr/ansible-role-updates/issues
 
   license: MIT
 
