--- a/defaults/main/dnf.yml
+++ b/defaults/main/dnf.yml
@@ -1,5 +1,5 @@
 ---
-# role: ansible-role-updates
+# role: jomrr.updates
 # file: defaults/main/dnf.yml
 
 # update_cmd for dnf, default installs als updates
