--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -1,10 +1,6 @@
 ---
-# role: ansible-role-updates
+# role: jomrr.updates
 # file: defaults/main/main.yml
-
-# The role is disabled by default, so you do not get in trouble.
-# Checked in tasks/main.yml which includes tasks.yml if enabled.
-updates_role_enabled: false
 
 # download upgradeable packages
 updates_download: true
