--- a/defaults/main/yum.yml
+++ b/defaults/main/yum.yml
@@ -1,5 +1,5 @@
 ---
-# role: ansible-role-updates
+# role: jomrr.updates
 # file: defaults/main/yum.yml
 
 # update_cmd for yum, default installs als updates
