--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,9 +1,9 @@
 ---
-# role: ansible-role-updates
+# role: jomrr.updates
 # file: handlers/main.yml
 
 - name: "Enable automatic updates"
-  service:
+  ansible.builtin.service:
     name: "{{ updates_service }}"
     enabled: true
     state: restarted
