--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,39 +1,14 @@
 ---
-# role: ansible-role-updates
+# role: jomrr.updates
 # file: meta/main.yml
 
 galaxy_info:
+  namespace: jomrr
   role_name: updates
-  author: jomrr
+  author: Jonas Mauer
+  company: none
   description: Ansible role for setting up automatic updates.
-  company: ''
-
-  # If the issue tracker for your role is not on github, uncomment the
-  # next line and provide a value
-  issue_tracker_url: https://github.com/jomrr/ansible-role-updates/issues
-
   license: MIT
-
-  min_ansible_version: "2.9"
-
-  # platforms is a list of platforms, and each platform has a name and a list of versions.
-  platforms:
-    - name: Amazon Linux 2
-      versions:
-        - any
-    - name: EL
-      versions:
-        - any
-    - name: Debian
-      versions:
-        - any
-    - name: Fedora
-      versions:
-        - any
-    - name: Ubuntu
-      versions:
-        - any
-
+  issue_tracker_url: https://github.com/jomrr/ansible-role-updates/issues
+  min_ansible_version: "2.17"
   galaxy_tags: []
-
-dependencies: []
