--- a/molecule/all/molecule.yml
+++ b/molecule/all/molecule.yml
@@ -1,167 +1,117 @@
 ---
-# role: ansible-role-updates
+# role: jomrr.updates
 # file: molecule/all/molecule.yml
 
+scenario:
+  name: all
 dependency:
   name: galaxy
+  requirements-file: meta/requirements.yml
 driver:
-  name: docker
-lint: |
-  set -e
-  yamllint .
-  ansible-lint
-  flake8
-platforms:
-  - name: amazon-updates
-    image: "jomrr/molecule-amazonlinux:latest"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: centos7-updates
-    image: "jomrr/molecule-centos:7"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: centos8-updates
-    image: "jomrr/molecule-centos:8"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: debian9-updates
-    image: "jomrr/molecule-debian:9"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: debian10-updates
-    image: "jomrr/molecule-debian:10"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: debian-updates
-    image: "jomrr/molecule-debian:latest"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: fedora-updates
-    image: "jomrr/molecule-fedora:latest"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: oracle7-updates
-    image: "jomrr/molecule-oraclelinux:7"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: oracle8-updates
-    image: "jomrr/molecule-oraclelinux:8"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: oracle-updates
-    image: "jomrr/molecule-oraclelinux:latest"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: ubuntu1604-updates
-    image: "jomrr/molecule-ubuntu:16.04"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: ubuntu1804-updates
-    image: "jomrr/molecule-ubuntu:18.04"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: ubuntu2004-updates
-    image: "jomrr/molecule-ubuntu:20.04"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  - name: ubuntu-updates
-    image: "jomrr/molecule-ubuntu:latest"
-    command: ~
-    pre_build_image: true
-    privileged: true
-    tmpfs:
-      - /tmp
-      - /run
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  name: podman
+lint: set -e; ansible-lint
 provisioner:
   name: ansible
+  config_options:
+    defaults:
+      interpreter_python: auto_silent
+      callback_whitelist: profile_tasks, timer, yaml
+    ssh_connection:
+      pipelining: true
   log: true
   playbooks:
-    prepare: ../resources/playbooks/prepare.yml
     converge: ../resources/playbooks/converge.yml
     verify: ../resources/playbooks/verify.yml
-  inventory:
-    group_vars:
-      all:
-        updates_role_enabled: true
 verifier:
   name: ansible
+platforms:
+  - name: almalinux-8-updates
+    image: "docker.io/jomrr/molecule-almalinux:8"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: almalinux-9-updates
+    image: "docker.io/jomrr/molecule-almalinux:9"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: alpine-3.18-updates
+    image: "docker.io/jomrr/molecule-alpine:3.18"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: alpine-3.19-updates
+    image: "docker.io/jomrr/molecule-alpine:3.19"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: archlinux-latest-updates
+    image: "docker.io/jomrr/molecule-archlinux:latest"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: debian-11-updates
+    image: "docker.io/jomrr/molecule-debian:11"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: debian-12-updates
+    image: "docker.io/jomrr/molecule-debian:12"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: debian-13-updates
+    image: "docker.io/jomrr/molecule-debian:13"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: fedora-39-updates
+    image: "docker.io/jomrr/molecule-fedora:39"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: fedora-40-updates
+    image: "docker.io/jomrr/molecule-fedora:40"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: fedora-rawhide-updates
+    image: "docker.io/jomrr/molecule-fedora:rawhide"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: opensuse-leap-15-updates
+    image: "docker.io/jomrr/molecule-opensuse-leap:15"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: ubuntu-20.04-updates
+    image: "docker.io/jomrr/molecule-ubuntu:20.04"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: ubuntu-22.04-updates
+    image: "docker.io/jomrr/molecule-ubuntu:22.04"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
+  - name: ubuntu-24.04-updates
+    image: "docker.io/jomrr/molecule-ubuntu:24.04"
+    pre_build_image: true
+    entrypoint: null
+    command: null
+    systemd: true
